--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
 
 /* Navbar */
 .navbar {
+    font-family: 'Courier Prime', monospace;
     background-color: #000;
     color: #fff;
     display: flex;
@@ -188,7 +189,7 @@ a, button {
 
 
 #typing-title {
-    font-size: 1.9rem;
+    font-size: 2.3rem;
     font-weight: 800;
     color: #e50914;
     margin-bottom: 1rem;
@@ -213,6 +214,14 @@ a, button {
 
 .red-heading {
     color: #e50914;
+    font-size: 2.3rem;
+}
+
+h1.red-heading {
+    text-align: center;
+    color: #e50914;
+    font-size: 3rem;
+    margin-top: 2rem;
 }
 
 .logo-img {
